# fw-openmower-v2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  build-binary-and-upload-docker.sh  build-binary.sh  lv_conf.h  main.c  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
boards/XCORE/: STM32H723xG_ITCM64k.ld  board.c  board.h  board_ex.c  board_ex.h  board_utils.cpp  board_utils.h  board_utils.hpp  hal_flash_device.c  mcuconf.h
bootloader/: xcore-boot-unsafe.elf
cfg/: chconf.h  etl_profile.h  halconf.h  lfs_config.h  lwipopts.h  mongoose_config.h
cmake/: GetGitVersion.cmake  gcc-arm-none-eabi.cmake  git_version.h.in
ext/: CMakeLists.txt
ext/ChibiOS_21.11.3/: CMakeLists.txt
ext/ChibiOS_21.11.3/ext/SEGGER/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c  _default_SEGGER_RTT_Conf.h
ext/ChibiOS_21.11.3/os/hal/ports/STM32/LLD/I2Cv3/: hal_i2c_lld.c
ext/ChibiOS_21.11.3/os/hal/ports/STM32/LLD/MACv2/: hal_mac_lld.c
ext/ChibiOS_21.11.3/os/hal/ports/STM32/LLD/USARTv3/: hal_uart_lld.c  hal_uart_lld.h
ext/ChibiOS_21.11.3/os/various/lwip_bindings/arch/: cc.h
ext/FastCRC/: CMakeLists.txt
ext/WGS84toCartesian/: WGS84toCartesian.hpp
ext/etl/: CMakeLists.txt
ext/lvgl/: CMakeLists.txt
ext/u8g2/: CMakeLists.txt
portable/: Io.cpp  mutex.cpp  packet.cpp  queue.cpp  socket.cpp  thread.cpp
portable/xbot/: Io.cpp  mutex.cpp  packet.cpp  queue.cpp  socket.cpp  system.cpp  thread.cpp
portable/xbot/include/xbot/: socket_impl.hpp
robots/: CMakeLists.txt
robots/include/: husq_310mkii_robot.hpp  lyfco_e1600_robot.hpp  robot.hpp  robot_310mkii_robot.hpp  sabo_common.hpp  sabo_robot.hpp  universal_5s_robot.hpp  universal_7s_robot.hpp  universal_8s_robot.hpp  universal_robot.hpp  worx_robot.hpp  xbot_robot.hpp  yardforce_robot.hpp  yardforce_v4_robot.hpp
robots/src/: husq_310mkii_robot.cpp  lyfco_e1600_robot.cpp  robot.cpp  robot_310mkii_robot.cpp  sabo_robot.cpp  universal_robot.cpp  worx_robot.cpp  xbot_robot.cpp  yardforce_robot.cpp  yardforce_v4_robot.cpp
robots/src/Lyfco_E1600/: Lyfco_E1600_robot.cpp  lyfco_e1600_robot.cpp
robots/src/Sabo/: robot_ex.hpp  sabo_robot.cpp  sabo_ui_controller.cpp  sabo_ui_controller.hpp  sabo_ui_driver.cpp  sabo_ui_driver.hpp
robots/src/Worx/: worx_robot.cpp
robots/src/YardForce/: robot_ex.hpp  yard_force_robot.cpp  yardforce_robot.cpp
robots/src/xBot/: robot_ex.hpp  xbot_robot.cpp
services/: gps_service.json
src/: api.cpp  boot_service_discovery.c  boot_service_discovery.cpp  boot_service_discovery.h  crc_lookup_map.hpp  globals.c  globals.cpp  globals.h  globals.hpp  heartbeat.c  i2c_utils.hpp  id_eeprom.c  id_eeprom.h  json_stream.cpp  json_stream.hpp  json_utils.hpp  main.cpp  services.cpp  services.hpp  status_led.c  status_led.h
src/chibios_lld/: hal_i2s_lld.c  hal_i2s_lld.h
src/debug/: checksum_test_interface.cpp  checksum_test_interface.hpp  debug_tcp_interface.cpp  debug_tcp_interface.hpp  debug_udp_interface.cpp  debug_udp_interface.hpp  debuggable_driver.cpp  thread_watermark.c  thread_watermark.h
src/drivers/: dma_resource_manager.cpp  dma_resource_manager.hpp
src/drivers/adc/: adc1.cpp  adc1.hpp  adc3.cpp  adc3.hpp  adc_driver.cpp  adc_driver.hpp
src/drivers/bms/: bms_driver.hpp  sabo_bms_driver.cpp  sabo_bms_driver.hpp  sbs_debug.cpp  sbs_debug.hpp  sbs_protocol.hpp
src/drivers/bq_2576/: bq_2576.cpp  bq_2576.hpp
src/drivers/charger/: charger.hpp
src/drivers/charger/bq_2576/: bq_2576.cpp  bq_2576.hpp
src/drivers/charger/bq_2579/: bq_2579.cpp  bq_2579.hpp
src/drivers/display/: worx_display_driver.cpp  worx_display_driver.hpp
src/drivers/emergency/: gpio_emergency_driver.cpp  gpio_emergency_driver.hpp
src/drivers/gpio/: gpio_expander.hpp
src/drivers/gpio/tca_95xx/: tca9534.hpp  tca9535.hpp  (+2 more)
src/drivers/gps/: gps_driver.cpp  gps_driver.h  gps_interface.cpp  gps_interface.h  nmea_gps_driver.cpp  nmea_gps_driver.h  ublox_gps_driver.cpp  ublox_gps_driver.h  ublox_gps_interface.cpp  ublox_gps_interface.h  ubx_datatypes.h
src/drivers/input/: gpio_input_driver.cpp  gpio_input_driver.hpp  input_driver.cpp  input_driver.hpp  sabo_input_driver.cpp  sabo_input_driver.hpp  sabo_input_types.hpp  setup_driver.cpp  setup_driver.hpp  simulated_input_driver.cpp  simulated_input_driver.hpp  worx_input_driver.cpp  worx_input_driver.hpp  yard_force_input_driver.cpp  yard_force_input_driver.hpp  yardforce_input_driver.cpp
src/drivers/motor/: motor_driver.hpp
src/drivers/sound/: i2s6_lld.c  i2s6_lld.cpp  i2s6_lld.h  i2s6_lld.hpp  sound_driver.c  sound_driver.cpp  sound_driver.h  sound_driver.hpp  sound_ids.hpp  sound_player.cpp  sound_player.hpp  sound_samples.hpp  sound_test.c  sound_wav.hpp
src/drivers/vesc/: README.md  VescDriver.cpp  VescDriver.h  VescUart.cpp  VescUart.h  buffer.cpp  buffer.h  crc.cpp  datatypes.h  esc_status.h
src/filesystem/: file.cpp  file.hpp  filesystem.cpp  filesystem.hpp  versioned_struct.hpp
src/services/: imu_service.cpp  imu_service.hpp  service_ext.hpp
src/services/bms_service/: bms_service.cpp  bms_service.hpp
src/services/diff_drive_service/: diff_drive_service.cpp  diff_drive_service.hpp
src/services/emergency_service/: emergency_service.cpp  emergency_service.hpp
src/services/gps_service/: gps_service.cpp  gps_service.hpp
src/services/high_level_service/: high_level_service.cpp  high_level_service.hpp
src/services/imu_service/: imu_service.cpp  imu_service.hpp
src/services/input_service/: input_service.cpp  input_service.hpp
src/services/meta_service/: meta_service.cpp  meta_service.hpp
src/services/mower_service/: mower_service.cpp  mower_service.hpp
src/services/mower_ui_service/: mower_ui_service.cpp  mower_ui_service.hpp
src/services/power_service/: power_service.cpp  power_service.hpp
src/services/pwm_diff_drive_service/: pwm_diff_drive_service.cpp  pwm_diff_drive_service.hpp
src/services/remote_gpio_service/: remote_gpio_service.cpp  remote_gpio_service.hpp
src/xcore/: xcore.hpp
tools/net_corruption_test/: README.md  send_corrupt.py
(+103 files in other folders)
